@@ -44,6 +44,7 @@ Data Changes:
 - Fixed Flashback System Enables Cyberzombie Conversion customdata not applying correctly.
 - The Cry Wolf Hacking Cyberprogram from Kill Code is now available for purchase for the standard price and availability of Hacking Cyberprograms.
 - Fixed incorrect bonusnode for First Impression quality.
+- Fixed Black Magic [Alt] not being valid for Puppet Master quality.
 
 Changed/New Strings:
 - LimitCondition_SoldierParagon
